--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
             <div class="col-s-6 col-6">
                 <a href="https://surveyheart.com/form/627e5c7c4e210348d9c0e6c7"><img class="img2 "src="./img2.jpg" alt="" ></a>
                 <h4>Camisas</h3>
+                    <h3>holis</h3>
             </div>
         
             <div class="col-s-6 col-6">
